src/objects/Cancellation_Intimation__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Demanded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Demanded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cancellation Intimations</relationshipLabel>
        <relationshipName>Cancellation_Intimations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LetterType__c</fullName>
        <label>Letter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Category__c</fullName>
        <label>Letter Category</label>
        <picklist>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_generated_date__c</fullName>
        <label>Letter generated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_sent_date__c</fullName>
        <label>Letter sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Letter</label>
        <referenceTo>Cancellation_Intimation__c</referenceTo>
        <relationshipLabel>Cancellation Intimations</relationshipLabel>
        <relationshipName>Cancellation_Intimations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Email__c</fullName>
        <label>Primary Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Print_Online_Version__c</fullName>
        <formula>IF( Is_Letter_Sent__c , HYPERLINK(&quot;/apex/apex/S_CancellationPage?cancelId=&quot; +Id + &quot;&amp;letterhead=true&amp;mode=view&quot;,&quot;Click Here&quot;), &apos;Not generated&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Online Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_without_Letter_Head__c</fullName>
        <formula>If( Is_Letter_Sent__c , HYPERLINK(&quot;/apex/apex/S_CancellationPage?cancelId=&quot; +Id + &quot;&amp;letterhead=false&amp;mode=view&quot;,&quot;Click Here&quot;), &apos;Not generated&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print without Letter Head</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sent By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cancellation_Intimations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Cancellation Intimations</relationshipLabel>
        <relationshipName>Cancellation_Intimations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc1_Email__c</fullName>
        <label>cc1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc2_Email__c</fullName>
        <label>cc2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cc3_Email__c</fullName>
        <label>cc3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>future_correspondence_email__c</fullName>
        <label>future correspondence email</label>
        <type>Email</type>
    </fields>
    <label>Cancellation Intimation</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Cancellation Intimation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Intimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>